# stillin

./: .bazelrc  BUILD.bazel  CLAUDE.md  MODULE.bazel  requirements.in  requirements.txt
.github/: renovate.json5
docs/bts7960/: README.md
docs/linear-actuator/: README.md
docs/rpi/: README.md
docs/wiring/: basic.md  full_system.md
src/: BUILD.bazel  actuator_cycle.py  linear_actuator.py
